@@ -386,7 +386,8 @@ def install(args):
     if packages:
         if args.dist:
             args.dist = "--target-release " + args.dist
-        command = "apt-get {} {} {} {} install " + " ".join(packages)
+        command = "apt-get {} {} {} {} install --auto-remove "
+        command += " ".join(packages)
         command = command.format(args.yes, args.noauth, args.recommends,
                                  args.dist)
         perform.execute(command, root=True)
@@ -401,7 +402,7 @@ def installsuggested(args):
         print(error.args[0])
         sys.exit(1)
     dependencies = " ".join(util.extract_dependencies(package, "Suggests"))
-    command = "apt-get {0} {1} {2} --show-upgraded install {3} {4}"
+    command = "apt-get {0} {1} {2} --show-upgraded --auto-remove install {3} {4}"
     command = command.format(args.recommends, args.yes, args.noauth,
                              dependencies, args.package)
     perform.execute(command, root=True)
